--- a/index.html
+++ b/index.html
@@ -800,6 +800,11 @@
             .founder-social a i {
                 font-size: 0.8rem;
             }
+
+            .timeline-item:nth-child(odd) .timeline-content::after {
+    left: -10px;
+    right: auto;
+}
         }
 
         /* تأثيرات إضافية للفيديو */
@@ -1524,7 +1529,7 @@
                     </div>
                 </div>
                 
-                <div data-aos="fade-left">
+                <div>
                     <h3 class="text-xl md:text-2xl font-bold mb-4 md:mb-6">Find Us on Campus</h3>
                     <div class="bg-white p-4 rounded-lg shadow-md">
                         <!-- Embedded Google Map - متجاوبة الآن -->
