--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
                         <img src="./images/khaled wasef.jpg" 
                              alt="Team Member" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 object-cover">
                         <div class="absolute bottom-2 right-2 bg-accent text-white rounded-full w-6 h-6 md:w-8 md:h-8 flex items-center justify-center">
-                            <i class="fas fa-crown text-xs"></i>
+                           <i class="fas fa-star text-xs"></i>
                         </div>
                     </div>
                     <h4 class="font-bold text-lg">Khaled Wasef</h4>
@@ -991,8 +991,9 @@
                     <div class="relative inline-block">
                         <img src="./images/mostafa abdelzaher.png" 
                              alt="Team Member" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 object-cover">
-                        <div class="absolute bottom-2 right-2 bg-primary text-white rounded-full w-6 h-6 md:w-8 md:h-8 flex items-center justify-center">
-                            <i class="fas fa-star text-xs"></i>
+                        <div class="absolute bottom-2 right-2 bg-accent text-white rounded-full w-6 h-6 md:w-8 md:h-8 flex items-center justify-center">
+                            
+                             <i class="fas fa-crown text-xs"></i>
                         </div>
                     </div>
                     <h4 class="font-bold text-lg">Mostafa AbdElzaher</h4>
@@ -1999,3 +2000,4 @@
     </script>
 </body>
 </html>
+
