--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
                     </div>
                 </div>
                 
-                <div data-aos="fade-left">
+                <div data-aos="fade-up">
                     <img src="./images/group2.jpg" 
                          alt="Momenta club members" class="rounded-lg shadow-lg w-full">
                 </div>
@@ -2000,4 +2000,5 @@
     </script>
 </body>
 </html>
+
 
