--- a/index.html
+++ b/index.html
@@ -1676,6 +1676,9 @@
                             <a href="https://www.youtube.com/@MomentaTube" class="bg-primary text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-secondary transition transform hover:scale-110">
                                 <i class="fab fa-youtube"></i>
                             </a>
+                            <a href="https://www.linkedin.com/company/momenta-hiet/" class="bg-primary text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-secondary transition transform hover:scale-110">
+                                <i class="fab fa-linked-in"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -2209,3 +2212,4 @@
     </script>
 </body>
 </html>
+
