--- a/index.html
+++ b/index.html
@@ -1164,6 +1164,32 @@
                     <p class="text-primary mb-2">HR</p>
                     <p class="text-gray-600 text-sm">third year computer and control engineering</p>
                 </div>
+                <!-- Team Member 4 -->
+                <div class="bg-gray-50 rounded-lg p-4 md:p-6 text-center card-hover">
+                    <div class="relative inline-block">
+                        <img src="./images/yehia.png" 
+                             alt="Team Member" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 object-cover">
+                        <div class="absolute bottom-2 right-2 bg-secondary text-white rounded-full w-6 h-6 md:w-8 md:h-8 flex items-center justify-center">
+                            <i class="fas fa-chart-line text-xs"></i>
+                        </div>
+                    </div>
+                    <h4 class="font-bold text-lg">Yehia Elrify</h4>
+                    <p class="text-primary mb-2">Vice Head</p>
+                    <p class="text-gray-600 text-sm">third year computer and control engineering</p>
+                </div>
+                <!-- Team Member 5 -->
+                <div class="bg-gray-50 rounded-lg p-4 md:p-6 text-center card-hover">
+                    <div class="relative inline-block">
+                        <img src="./images/eldacrory.jpg" 
+                             alt="Team Member" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 object-cover">
+                        <div class="absolute bottom-2 right-2 bg-secondary text-white rounded-full w-6 h-6 md:w-8 md:h-8 flex items-center justify-center">
+                            <i class="fas fa-chart-line text-xs"></i>
+                        </div>
+                    </div>
+                    <h4 class="font-bold text-lg">Ahmed Eldakrory</h4>
+                    <p class="text-primary mb-2">CO Head</p>
+                    <p class="text-gray-600 text-sm">third year computer and control engineering</p>
+                </div>
             </div>
         </div>
     </section>
@@ -2212,4 +2238,5 @@
     </script>
 </body>
 </html>
+
 
