--- a/index.html
+++ b/index.html
@@ -1549,7 +1549,7 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12" data-aos="fade-up">Join Momenta</h2>
             
             <div class="bg-gradient-to-br from-gray-50 to-primary/5 rounded-lg p-6 md:p-8 shadow-md" data-aos="fade-up">
-                <form id="join-form" class="space-y-6" action="https://formspree.io/f/mdkwaldo" method="POST">
+                <form id="join-form" class="space-y-6" action="https://script.google.com/macros/s/AKfycbzclqSz61aTD5l9_FI5v7uO4yfgz7v9XSeLDPBw8VuptRvAXiNo8_zLcT8L31JMt9at5A/exec" method="POST">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6">
                         <div>
                             <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
@@ -1862,8 +1862,8 @@
                 events: [
                     {
                         title: 'wolcome party for new students',
-                        start: '2025-09-30',
-                        end: '2025-09-30',
+                        start: '2025-10-7',
+                        end: '2025-10-7',
                         className: 'social',
                         description: 'wolcome party for new students'
                     },
@@ -2238,5 +2238,6 @@
     </script>
 </body>
 </html>
+
 
 
