--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     
     <!-- FullCalendar -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css">
+
+    <link rel="icon" type="image/png" href="./images/485392458_1151889296947287_7131704205936737111_n.ico">
     
     <!-- Custom Styles -->
     <style>
