--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,18 @@
                     <p class="text-primary mb-2">Media Vice Head</p>
                     <p class="text-gray-600 text-sm">second year electrical engineering</p>
                 </div>
-                <!-- Team Member 13 -->
+                <!-- Team Member 15 -->
+                <div class="bg-gray-50 rounded-lg p-4 md:p-6 text-center card-hover">
+                    <div class="relative inline-block">
+                        <img src="./images/abo sen.jpg" 
+                             alt="Team Member" class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto mb-4 object-cover">
+                        <div class="absolute bottom-2 right-2 bg-secondary text-white rounded-full w-6 h-6 md:w-8 md:h-8 flex items-center justify-center">
+                            <i class="fas fa-paint-brush text-xs"></i>
+                        </div>
+                    </div>
+                    <h4 class="font-bold text-lg">Mohamed Abo Sen</h4>
+                    <p class="text-primary mb-2">Graphics Design Head</p>
+                    <p class="text-gray-600 text-sm">Third year computer and control engineering</p>
                 <!-- Team Member 13 -->
                 <!-- Team Member 13 -->
                 
